--- a/vignettes/ProFound-Sky_Shenanigans.Rmd
+++ b/vignettes/ProFound-Sky_Shenanigans.Rmd
@@ -247,24 +247,24 @@ We can see that both the sky and sky-RMS estimates behave best when the contamin
 
 The example above is only for a simple toy model, but it gives you some idea that you want comfortably more than half of the pixels to be real sky pixels in general. Obviously using the bad pixel mask and the objects mask helps a lot, but in detail very few pixels are pure sky pixels because there are always increasingly faint (sub surface brightness limit) sources that bias the flux positively and in a non-uniform manner. This is similar to saying that all images are *confused*, you just cannot always tell by looking at them. This fact is more obvious when you consider the earlier simulated image data before and after we add realistic sky noise. Those broad low-surface brightness wings are still there in the noisy image, they are just well below the applied noise level. However, those low surface brightness features are still able to bias our estimated sky away from the intrinsic values we would like to know.
 
-The difference between the sky level estimators (mean, median or mode) and sky-RMS level estimator (quantile vs. standard-deviation) is an interesting point to consider. In the toy situation described it is easy to convince youself that you would want to use the median for the sky and the quantile for the sky-RMS, since these are both systematically nearer to the specified 'intrinsic' sky. However, what really matters is the origin of the postively biased flux that skews the distribution. There are a number of processes that generate the 'sky' and contribute to the  extended area signal in a typical CCD image, in roughly descending order of importance:
+The difference between the sky level estimators (mean, median or mode) and sky-RMS level estimator (quantile vs. standard-deviation) is an interesting point to consider. In the toy situation described it is easy to convince yourself that you would want to use the median for the sky and the quantile for the sky-RMS, since these are both systematically nearer to the specified 'intrinsic' sky. However, what really matters is the origin of the positively biased flux that skews the distribution. There are a number of processes that generate the 'sky' and contribute to the  extended area signal in a typical CCD image, in roughly descending order of importance:
 
-1. The actual night sky caused by Earth's atmosphere glowing. Can be quite spatially and temporally variable (in the NIR, distant artifical lights turning on and off etc)
+1. The actual night sky caused by Earth's atmosphere glowing. Can be quite spatially and temporally variable (in the NIR, distant artificial lights turning on and off etc)
 2. Flux scattered around the image due to telescope optics causing very broad ~Lorentzian wings
 3. Scattering of astronomical light by the Earth's atmosphere, usually at very small scales (close to Gaussian usually)
-4. Intrinsicially broad features caused by the Milky-Way foreground
-5. Intrinsicially broad wings caused by extra-galactic sources (low surface brightness wings of galaxies)
+4. Intrinsically broad features caused by the Milky-Way foreground
+5. Intrinsically broad wings caused by extra-galactic sources (low surface brightness wings of galaxies)
 6. Undetectable faint sources, can be structured (Milky-Way stars) or effectively uniform in distribution (high redshift galaxies)
 
-The question is then: which of these do you want to remove? The answer clearly depends on what sources you are trying to extract photometry for. If you are doing stellar photometry of a bright star then you almost certainly want to remove 1/4/5/6, i.e. you actually want to model the light from the star that has been scattered by the atmosphere and the telescope (assuming it is the dominant contribution close to the star being modelled). If you want to profile a faint galaxy then you probably need to remove 1/2 (assuming it mostly caused by other source)/3 (assuming it mostly caused by other source)/4/6, i.e. you want to keep the faint wings of your target galaxy intact. There is not a trivally right answer, but **ProFound** does offer a few routes to compute these different types of sky. The basic message is you might prefer a median type sky or a mean type sky, depending on your use case. If your source sits **on top of** the sky (whatever makes it) then you probably want to use the more biased mean estimator. If your source **is the dominant part** of the observable background (e.g. when profiling the faint wings of galaxies) then you might prefer the less biased median estimator.
+The question is then: which of these do you want to remove? The answer clearly depends on what sources you are trying to extract photometry for. If you are doing stellar photometry of a bright star then you almost certainly want to remove 1/4/5/6, i.e. you actually want to model the light from the star that has been scattered by the atmosphere and the telescope (assuming it is the dominant contribution close to the star being modelled). If you want to profile a faint galaxy then you probably need to remove 1/2 (assuming it mostly caused by other source)/3 (assuming it mostly caused by other source)/4/6, i.e. you want to keep the faint wings of your target galaxy intact. There is not a trivially right answer, but **ProFound** does offer a few routes to compute these different types of sky. The basic message is you might prefer a median type sky or a mean type sky, depending on your use case. If your source sits **on top of** the sky (whatever makes it) then you probably want to use the more biased mean estimator. If your source **is the dominant part** of the observable background (e.g. when profiling the faint wings of galaxies) then you might prefer the less biased median estimator.
 
-An ongoing question is whether you can do better by using **ProFound** to model the background for a given source. The three obvious options are:
+An unresolved issue is whether you can extract better models by using **ProFit** to model the background for a given source. The three obvious options are:
 
 - Use **ProFound** sky subtraction on the image and do not fit a sky background in **ProFit**
 - Use **ProFound** sky subtraction on the image and also fit a sky background in **ProFit**
 - Do not use the **ProFound** sky subtraction on the image and only fit a sky background in **ProFit**
 
-The jury is a bit out on which of the above works best, but my impression is that the first or second option is almost certainly the best route to take for pragmatic reasons. The next question if what type of **ProFound** sky should be subtract.
+For pragmatic reasons of needing to remove complex sky that cannot be fully generatively modelled with \profit, options 1 or 2 are likely to be the best strategy with the majority of use cases.
 
 ## ProFound Sky Options
 
